--- a/Pages/Game/Game.cshtml
+++ b/Pages/Game/Game.cshtml
@@ -20,7 +20,7 @@
     {
         <div class="game-over-message">
             <p>@Model.Feedback</p>
-            <a href="/Game" class="restart-button">Play Again</a>
+            <a href="/Game/Game" class="restart-button">Play Again</a>
         </div>
     }
     else
