--- a/Pages/Identity/Login.cshtml
+++ b/Pages/Identity/Login.cshtml
@@ -28,37 +28,37 @@
             width: 100%;
         }
 
-        /* Title inside the card */
-        .card h2 {
-            color: #FFC400;
-            font-size: 2rem;
-            margin-bottom: 20px;
-            text-align: center;
-        }
+            /* Title inside the card */
+            .card h2 {
+                color: #FFC400;
+                font-size: 2rem;
+                margin-bottom: 20px;
+                text-align: center;
+            }
 
         /* Form group styling */
         .form-group {
             margin-bottom: 15px;
         }
 
-        .form-group label {
-            font-size: 1rem;
-            color: #FFC400;
-        }
+            .form-group label {
+                font-size: 1rem;
+                color: #FFC400;
+            }
 
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            background-color: #444444;
-            color: #fff;
-            border: 1px solid #FFC400;
-            border-radius: 5px;
-        }
+            .form-group input {
+                width: 100%;
+                padding: 10px;
+                background-color: #444444;
+                color: #fff;
+                border: 1px solid #FFC400;
+                border-radius: 5px;
+            }
 
-        .form-group input:focus {
-            outline: none;
-            border-color: #FFC400;
-        }
+                .form-group input:focus {
+                    outline: none;
+                    border-color: #FFC400;
+                }
 
         /* Submit button styling */
         .submit-button {
@@ -72,9 +72,9 @@
             font-size: 1rem;
         }
 
-        .submit-button:hover {
-            background-color: #e6a800;
-        }
+            .submit-button:hover {
+                background-color: #e6a800;
+            }
 
         /* Info text at the bottom */
         .info-text {
@@ -88,8 +88,16 @@
             text-decoration: none;
         }
 
-        .link:hover {
-            text-decoration: underline;
+            .link:hover {
+                text-decoration: underline;
+            }
+
+        /* Error message styling */
+        .error-message {
+            color: #FF6347;
+            font-size: 1rem;
+            margin-top: 10px;
+            text-align: center;
         }
     </style>
 </head>
@@ -111,6 +119,12 @@
 
             <button type="submit" class="submit-button">Login</button>
         </form>
+
+        <!-- Conditionally render error message if there is a message -->
+        @if (!string.IsNullOrEmpty(Model.Message))
+        {
+            <p class="error-message">@Model.Message</p>
+        }
 
         <p class="info-text">Don't have an account? <a href="../Identity/Register" class="link">Register here</a></p>
     </div>
