--- a/Pages/Identity/Login.cshtml
+++ b/Pages/Identity/Login.cshtml
@@ -2,6 +2,7 @@
 @model BananaGame.Pages.Identity.LoginModel
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <style>
         /* General body and background styles */
         body {
@@ -60,6 +61,27 @@
                     border-color: #FFC400;
                 }
 
+        /* Eye icon inside the input */
+        .password-container {
+            position: relative;
+            width: 100%;
+        }
+
+            .password-container input {
+                width: 100%;
+            }
+
+
+        .password-icon {
+            position: absolute;
+            right: 2px;
+            top: 65%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            color: #FFC400;
+            font-size: 18px;
+        }
+
         /* Submit button styling */
         .submit-button {
             background-color: #FFC400;
@@ -112,9 +134,11 @@
                 <input type="text" id="username" name="username" required>
             </div>
 
-            <div class="form-group">
+            <div class="form-group password-container">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
+                <i id="togglePassword" class="fas fa-eye password-icon"></i>
+                <p class="error-message" id="passwordError"></p>
             </div>
 
             <button type="submit" class="submit-button">Login</button>
@@ -129,3 +153,22 @@
         <p class="info-text">Don't have an account? <a href="../Identity/Register" class="link">Register here</a></p>
     </div>
 </div>
+
+<script>
+    // Function to toggle the password visibility
+    document.getElementById('togglePassword').addEventListener('click', function () {
+        const passwordField = document.getElementById('password');
+        const toggleButton = document.getElementById('togglePassword');
+
+        // Toggle password visibility
+        if (passwordField.type === 'password') {
+            passwordField.type = 'text';
+            toggleButton.classList.remove('fa-eye');
+            toggleButton.classList.add('fa-eye-slash'); // Change to eye-slash icon when password is visible
+        } else {
+            passwordField.type = 'password';
+            toggleButton.classList.remove('fa-eye-slash');
+            toggleButton.classList.add('fa-eye'); // Change to eye icon when password is hidden
+        }
+    });
+</script>
